cargo-features = [
    "profile-rustflags"
]

[package]
name = "rs_webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"

[profile.release]
rustflags = [
    "-Copt-level=3",
    "-Ctarget-cpu=native"
]